--- a/bewize-dashboard/package.json
+++ b/bewize-dashboard/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^7.0.2",
+    "@mui/styled-engine-sc": "^7.0.2",
+    "@mui/x-charts": "^8.2.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -20,6 +22,8 @@
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
+    "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
