--- a/bewize-dashboard/package.json
+++ b/bewize-dashboard/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.0.2",
     "@mui/styled-engine-sc": "^7.0.2",
     "@mui/x-charts": "^8.2.0",
